fix animation hero and hide features without text on mobile

--- a/src/conferences/rs/sass/components/_features-grid.sass
+++ b/src/conferences/rs/sass/components/_features-grid.sass
@@ -84,6 +84,9 @@
     &.hidden-sm
       +sm
         display: none
+    &:not(:has(.features-grid__pop))
+      +sm
+        display: none
   &__fb
     display: block
     width: 94px
